tests/ui/rfcs/rfc-2632-const-trait-impl/const-closures.stderr
error[E0015]: cannot call non-const closure in constant functions
  --> $DIR/const-closures.rs:12:5
   |
LL |     f() * 7
   |     ^^^
   |
   = note: calls in constant functions are limited to constant functions, tuple structs and tuple variants
help: consider further restricting this bound
   |
LL |         F: ~const FnOnce() -> u8 + ~const std::ops::Fn<()>,
   |                                  +++++++++++++++++++++++++

error[E0015]: cannot call non-const closure in constant functions
  --> $DIR/const-closures.rs:24:5
   |
LL |     f() + f()
   |     ^^^
   |
   = note: calls in constant functions are limited to constant functions, tuple structs and tuple variants
help: consider further restricting this bound
   |
LL | const fn answer<F: ~const Fn() -> u8 + ~const std::ops::Fn<()>>(f: &F) -> u8 {
   |                                      +++++++++++++++++++++++++

error[E0015]: cannot call non-const closure in constant functions
  --> $DIR/const-closures.rs:24:11
   |
LL |     f() + f()
   |           ^^^
   |
   = note: calls in constant functions are limited to constant functions, tuple structs and tuple variants
help: consider further restricting this bound
   |
LL | const fn answer<F: ~const Fn() -> u8 + ~const std::ops::Fn<()>>(f: &F) -> u8 {
   |                                      +++++++++++++++++++++++++

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0015`.
